[package]
name = "rofisys"
version = "0.1.0"
authors = ["Raugas, Mark V <mark.raugas@pnnl.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.50.0"
subprocess = "0.1.18"

[lib]
name = "rofisys"
path = "src/lib.rs"
