[package]
name = "rofisys"
version = "0.2.1"
authors = [" Mark V Raugas <mark.raugas@pnnl.gov>", "Ryan D. Friese <ryan.friese@pnnl.gov>", "Roberto Gioiosa <roberto.gioiosa@pnnl.gov>"]
edition = "2021"
description = "This system crate provides Rust language bindings (via the use of Bindgen) to the Rust-OFI library."
readme = "README.md"
repository = "https://github.com/pnnl/rofi-sys"
license-file = "LICENSE"
keywords = ["hpc","network","ditributed","libfabrics"]
categories = ["external-ffi-bindings", "network-programming"]


[dependencies]


[build-dependencies]
bindgen = "0.50.0"
subprocess = "0.1.18"
autotools = "0.2.4"
glob = "0.3.0"

[lib]
name = "rofisys"
path = "src/lib.rs"

